# gimp-mcp

./: .coderabbit.yaml  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  GIMP_MCP_PROTOCOL.md  README.md  RECIPES.md  agent_edit_demo.py  bg_remove.py  bg_remove_iterative.py  gimp-mcp-plugin.py  gimp_mcp_server.py  pyproject.toml  run_tests.py  test_gimp_api.py
.github/: labeler.yml
.github/workflows/: issue-labeler.yml  lint.yml
docs/: best_practices.md  iterative_workflow.md
tests/: __init__.py  test_add_text_metadata.py  test_bitmap_validation.py  test_fixtures.py  test_gimp_api.py  test_gimp_bitmap_enhanced.py
tests/continuous_edit_test/: continuous_edit_test.py
